# bsplines

./: CMakeLists.txt  README.md
include/bsplines/: bspline3.hpp  bspline3.tpp  bspline_base.hpp  bspline_base.tpp
tests/: CMakeLists.txt  test_bspline3.cpp
